# lanthorn

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  setup_dev.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  nightly.yml
lanthorn/: Cargo.toml  build.rs
lanthorn-common/: Cargo.toml
lanthorn-common/src/: lib.rs
lanthorn-ebpf/: Cargo.toml
lanthorn-ebpf/src/: main.rs  vmlinux.rs
lanthorn/migrations/: 20251215214523_init.sql  20251219000000_add_dns_tracking.sql  20260101165740_add_process_info.sql  20260101170000_add_resolved_ip_to_dns_events.sql  20260101170001_add_threats.sql  20260102210945_add_connection_aggregations.sql
lanthorn/src/: ebpf_handler.rs  main.rs  monitor.rs  storage.rs  utils.rs
lanthorn/src/monitor/: dns.rs  dns_cache.rs  docker.rs  ebpf.rs  mod.rs  tests.rs  threats.rs
