[package]
name = "lanthorn-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
lanthorn-common = { path = "../lanthorn-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "lanthorn"
path = "src/main.rs"
